Fixed a CSS regression introduced when fixing the double border issues. The variable `@toolbar-separator-color` was never used.

--- a/modules/oxide/src/less/theme/components/toolbar/toolbar.less
+++ b/modules/oxide/src/less/theme/components/toolbar/toolbar.less
@@ -54,6 +54,13 @@
     transition: opacity .3s ease, height .2s linear .1s, visibility 0s linear .3s;
   }
 
+  // Add top borders
+  .tox-menubar + .tox-toolbar,
+  .tox-menubar + .tox-toolbar-overlord .tox-toolbar__primary {
+    border-top: 1px solid @toolbar-separator-color;
+    margin-top: -1px; // Temporary fix to hide menubar bottom border below the toolbar
+  }
+
   .tox-pop .tox-toolbar {
     border-width: 0;
   }
